--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-node_modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# deployment files
+*.zip
+deploy.zip
+railway-deploy.zip
+webapp-deploy.zip
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
